# MAI-OOP

./: README.md
lw_1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  main_test
lw_1/include/: validbrackets.h
lw_1/src/: validBrackets.cpp
lw_1/test/: tests01.cpp
lw_2/: CMakeCache.txt  CMakeLIsts.txt  CMakeLists.txt  Makefile  about  cmake_install.cmake  main.cpp
lw_2/include/: Octal.hpp  octal.h  vector.h
lw_2/src/: Octal.cpp  octal.cpp  vector.cpp
lw_2/tests/: test.cpp
lw_3/: CMakeLists.txt  main.cpp
lw_3/include/: figure.h  figures.hpp  point2d.hpp  rectangle.h  vector.h
lw_3/src/: figure.cpp  figures.cpp  point2d.cpp  rectangle.cpp  vector.cpp
lw_3/tests/: figures_test.cpp  point2d_test.cpp  vector_test.cpp
lw_4/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  figure_test  lab  main.cpp  point2d_test  test_figure  test_point2d  test_vector  vector_test
lw_4/include/: figure.hpp  figures.hpp  point2d.hpp
lw_4/templates/: figures.cpp  point2d.cpp
lw_4/tests/: figure_test.cpp  point2d_test.cpp  vector_test.cpp
